[gd_scene load_steps=4 format=2]

[ext_resource path="res://Items/magic.gd" type="Script" id=1]
[ext_resource path="res://Efects/sunburn.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.05682, 6.10817 )

[node name="magic" type="KinematicBody2D"]

position = Vector2( 0, -45 )
rotation = 1.5708
scale = Vector2( 1.7, 1.7 )
z_index = -1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="area" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area" index="0"]

position = Vector2( 26.5441, -9.60895e-05 )
shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="sunburn" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 26.7943, -9.69952e-05 )
scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]

[node name="Timer2" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]


